--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-between">
             <!-- esercizio -->
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center flex-wrap">
               <button
                 type="button"
                 class="btn btn-outline-danger mx-3"
@@ -50,6 +50,72 @@
                 id="esercizio-2"
               >
                 ESERCIZIO 2
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-3"
+              >
+                ESERCIZIO 3
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-4"
+              >
+                ESERCIZIO 4
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-5"
+              >
+                ESERCIZIO 5
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-6"
+              >
+                ESERCIZIO 6
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-7"
+              >
+                ESERCIZIO 7
+              </button>
+            </div>
+
+            <!-- esercizio -->
+            <div class="d-flex align-items-center">
+              <button
+                type="button"
+                class="btn btn-outline-danger mx-3"
+                id="esercizio-8"
+              >
+                ESERCIZIO 8
               </button>
             </div>
           </div>
