--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="d-flex align-items-center flex-wrap">
               <button
                 type="button"
-                class="btn btn-outline-danger mx-3"
+                class="btn btn-outline-success mx-3"
                 id="esercizio-1"
               >
                 ESERCIZIO 1
@@ -46,7 +46,7 @@
             <div class="d-flex align-items-center">
               <button
                 type="button"
-                class="btn btn-outline-danger mx-3"
+                class="btn btn-outline-success mx-3"
                 id="esercizio-2"
               >
                 ESERCIZIO 2
@@ -57,7 +57,7 @@
             <div class="d-flex align-items-center">
               <button
                 type="button"
-                class="btn btn-outline-danger mx-3"
+                class="btn btn-outline-success mx-3"
                 id="esercizio-3"
               >
                 ESERCIZIO 3
@@ -68,7 +68,7 @@
             <div class="d-flex align-items-center">
               <button
                 type="button"
-                class="btn btn-outline-danger mx-3"
+                class="btn btn-outline-success mx-3"
                 id="esercizio-4"
               >
                 ESERCIZIO 4
@@ -79,7 +79,7 @@
             <div class="d-flex align-items-center">
               <button
                 type="button"
-                class="btn btn-outline-danger mx-3"
+                class="btn btn-outline-success mx-3"
                 id="esercizio-5"
               >
                 ESERCIZIO 5
